[package]
name = "combine_images"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[lib]
name = "combine_images"
path = "src/lib/lib.rs"

[[bin]]
name = "combine_images"
path = "src/bin/main.rs"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
image = "0.24"
rand = "0.8"
reqwest = "0.11"
rocket = { version = "=0.5.0-rc.4", features = [
    "json",
    "uuid",
] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
anyhow = "1.0.75"


